# social_network

./: .gitignore  README.md  automated_bot.py  bot_config.ini  docker-compose.yml  index.html  main.py  netlify.toml  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migrations/: env.py
migrations/versions/: 3c248ecd956d_init.py  5f8892099574_init.py  ee0ff7ff8b11_init.py
postgres-data/: postmaster.pid
postgres-data/base/16384/: 1247  1249  1249_fsm  1259  1259_fsm  16672  16675  16677  16678  16683  16684  16686  16687  16693  16700  16701  16706  16707  16719  16720  16724  16726  2224  2579  2604  2606  2608  2610  2619  2619_fsm  2619_vm  2620  2620_vm  2656  2657  2658  2659  2662  2663  2664  (+18 more)
postgres-data/base/4/: 2619
postgres-data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
postgres-data/pg_xact/: 0000
src/: schemas.py
src/conf/: config.py  messages.py
src/database/: connect.py  models.py
src/repository/: analytics.py  comments.py  posts.py  users.py
src/routes/: analytics.py  auth.py  comments.py  posts.py  users.py
src/services/: auth.py  email_letters.py
tests/: test_pytests_comments.py  test_unittests_analytics.py  unittests_analytics.py
